--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 MONGODB_URI=mongodb+srv://aryan61865:ZccnMPPYg8mXXYFa@cluster0.r2gbu4q.mongodb.net/
 
-CLERK_WEBHOOK_SECRET =""
+CLERK_WEBHOOK_SECRET ="whsec_Ltw2a9GKqGvl5Y/L0+ZfEzj9WPLj2"
