--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,11 @@
+JWT_SECRET ="dev#secret"
+
 MONGODB_URI=mongodb+srv://aryan61865:ZccnMPPYg8mXXYFa@cluster0.r2gbu4q.mongodb.net/
 
-CLERK_WEBHOOK_SECRET ="whsec_Ltw2a9GKqGvl5Y/L0+ZfEzj9WPLj2"
+CLERK_WEBHOOK_SECRET ="whsec_NPkhR88X6EYSXXzNcj90ZWv857mHTntV"
+
+
+#Cloudinary Setup
+CLOUDINARY_NAME = "dkw5p8i20"
+CLOUDINARY_API_KEY = "538244326191298"
+CLOUDINARY_SECRET_KEY ="rD7PvB3q6cj7fprp0Dp11jzM3WI"
