--- a/Backend/.env
+++ b/Backend/.env
@@ -7,5 +7,5 @@ CLERK_WEBHOOK_SECRET ="whsec_NPkhR88X6EYSXXzNcj90ZWv857mHTntV"
 
 #Cloudinary Setup
 CLOUDINARY_NAME = "dkw5p8i20"
-CLOUDINARY_API_KEY = "538244326191298"
+CLOUDINARY_API_KEY = 538244326191298
 CLOUDINARY_SECRET_KEY ="rD7PvB3q6cj7fprp0Dp11jzM3WI"
