--- a/Backend/.env
+++ b/Backend/.env
@@ -1,11 +1,19 @@
 JWT_SECRET ="dev#secret"
 
+
+#MongoDb Setup
+
 MONGODB_URI=mongodb+srv://aryan61865:ZccnMPPYg8mXXYFa@cluster0.r2gbu4q.mongodb.net/
 
-CLERK_WEBHOOK_SECRET ="whsec_NPkhR88X6EYSXXzNcj90ZWv857mHTntV"
 
 
 #Cloudinary Setup
 CLOUDINARY_NAME = "dkw5p8i20"
 CLOUDINARY_API_KEY = 538244326191298
 CLOUDINARY_SECRET_KEY ="rD7PvB3q6cj7fprp0Dp11jzM3WI"
+
+
+# Clerk Setup
+
+CLERK_PUBLISHABLE_KEY=pk_test_dXByaWdodC1jaGFtb2lzLTE2LmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_lvFPAsmrvNHqu12fF6QZqBHe6DG8QOfYweia3ARtgn
