--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,13 @@
+JWT_SECRET="DEV#SECRET"
+
 MONGODB_URI=mongodb+srv://aryanguptash2003:0dX350W5EfggbBGd@cluster0.w8uras1.mongodb.net/
 
 
-CLERK_WEBHOOK_SECRET =""
+CLERK_WEBHOOK_SECRET ="whsec_YEg/96SwmdTqVH/QrifZZlR3osYuht55"
+
+
+
+#Cloudinary Setup
+CLOUDINARY_NAME = " dgi4t6nqs"
+CLOUDINARY_API_KEY =578827192589886
+CLOUDINARY_SECRET_KEY ="bB0OyZ438DdgH4IffeVYEXFmimg"
